--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "node-sass": "^9.0.0"
+  },
+  "dependencies": {
+    "node-gyp": "^9.4.0"
   }
 }
